assert-struct/tests/compile_fail/type_mismatch.stderr
error[E0277]: can't compare `u32` with `String`
  --> tests/compile_fail/type_mismatch.rs:18:14
   |
18 |         age: "thirty",
   |              ^^^^^^^^ no implementation for `u32 == String`
   |
   = help: the trait `PartialEq<String>` is not implemented for `u32`
           but trait `PartialEq<u32>` is implemented for it
   = help: for that trait implementation, expected `u32`, found `String`
   = note: required for `&u32` to implement `PartialEq<&String>`
